--- a/ansible/roles/autoware/tasks/main.yaml
+++ b/ansible/roles/autoware/tasks/main.yaml
@@ -6,7 +6,7 @@
     mode: 0644
     marker: "# {mark} autoware"
     block: |
-      export ROS_DOMAIN_ID={{ ros_domain_id }}
+      export ROS_DOMAIN_ID={{ autoware_ros_domain_id }}
   become: true
 
 - name: Add sourcing command in user's bashrc
