--- a/ansible/roles/cyclonedds/tasks/main.yaml
+++ b/ansible/roles/cyclonedds/tasks/main.yaml
@@ -37,10 +37,10 @@
     reload: true
     sysctl_file: /etc/sysctl.d/60-cyclonedds.conf
   with_dict:
-    net.ipv4.ipfrag_time: "{{ cyclonedds.ipfrag_time }}"
-    net.ipv4.ipfrag_high_thresh: "{{ cyclonedds.ipfrag_high_thresh }}"
-    net.core.rmem_max: "{{ cyclonedds.rmem_max }}"
-    net.core.rmem_default: "{{ cyclonedds.rmem_default }}"
+    net.ipv4.ipfrag_time: "{{ cyclonedds_ipfrag_time }}"
+    net.ipv4.ipfrag_high_thresh: "{{ cyclonedds_ipfrag_high_thresh }}"
+    net.core.rmem_max: "{{ cyclonedds_rmem_max }}"
+    net.core.rmem_default: "{{ cyclonedds_rmem_default }}"
   become: true
 
 - name: Add settings to autoware.env
