--- a/ansible/roles/netplan/tasks/main.yaml
+++ b/ansible/roles/netplan/tasks/main.yaml
@@ -12,5 +12,6 @@
   become: true
 
 - name: Netplan apply
-  command: netplan apply
+  ansible.builtin.command: netplan apply
   become: true
+  changed_when: false
