--- a/ansible/roles/cgroups/tasks/main.yaml
+++ b/ansible/roles/cgroups/tasks/main.yaml
@@ -1,6 +1,6 @@
 - name: Create directory for user cgroup config
   ansible.builtin.file:
-    path: /etc/systemd/system/user@.server.d
+    path: /etc/systemd/system/user@.service.d
     state: directory
     mode: 0755
   become: true
@@ -8,6 +8,6 @@
 - name: Copy user cgroup config
   ansible.builtin.copy:
     src: user-resources.conf
-    dest: /etc/systemd/system/user@.server.d/user-resources.conf
+    dest: /etc/systemd/system/user@.service.d/user-resources.conf
     mode: 0755
   become: true
