--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -17,32 +17,33 @@
           - apt-transport-https
         install_recommends: false
         update_cache: true
-    - name: Add ROS 2 source list
-      shell: echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
-    - name: Download gpg key
-      ansible.builtin.uri:
-        url: https://raw.githubusercontent.com/ros/rosdistro/master/ros.key
-        dest: /usr/share/keyrings/ros-archive-keyring.gpg
-        follow_redirects: all
+    # - name: Add ROS 2 source list
+    #   shell: echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
+    # - name: Download gpg key
+    #   ansible.builtin.uri:
+    #     url: https://raw.githubusercontent.com/ros/rosdistro/master/ros.key
+    #     dest: /usr/share/keyrings/ros-archive-keyring.gpg
+    #     follow_redirects: all
     - name: Apt install
       ansible.builtin.apt:
         name:
           - nvidia-jetpack
+          - nvidia-opencv
           - build-essential
           - cmake
           - git
           - libbullet-dev
           - libpython3-dev
           - python3-wheel
-          - python3-colcon-common-extensions
+          # - python3-colcon-common-extensions
           - python3-flake8
           - python3-pip
           - python3-numpy
           - python3-pytest-cov
-          - python3-rosdep
+          # - python3-rosdep
           - python3-setuptools
-          - python3-vcstool
-          - python3-rosinstall-generator
+          # - python3-vcstool
+          # - python3-rosinstall-generator
           - libasio-dev
           - libtinyxml2-dev
           - libcunit1-dev
@@ -74,6 +75,10 @@
       - pytest
       - pybind11-global
       - importlib_resources
+      - rosdep
+      - vcstool
+      - colcon-common-extensions
+      - rosinstall-generator
     extra_args: -U
   become: true # need to sudo privilege to install packages globally
 
@@ -209,26 +214,26 @@
     path: "{{ source_build_dir }}/jetson-containers"
   register: opencv_build_dir_exist
 
-- name: Build and install OpenCV
-  block:
-    - name: "{{ block_name }}: Download install script"
-      ansible.builtin.git:
-        repo: https://github.com/dusty-nv/jetson-containers.git
-        dest: "{{ source_build_dir }}/jetson-containers"
-        version: L4T-R35.1.0
-    - name: "{{ block_name }}: install dependencies"
-      shell: ./opencv_install_deps.sh
-      args:
-        chdir: "{{ source_build_dir }}/jetson-containers/scripts"
-      become: true
-    - name: "{{ block_name }}: execute install script"
-      shell: ./opencv_install.sh https://nvidia.box.com/shared/static/5v89u6g5rb62fpz4lh0rz531ajo2t5ef.gz OpenCV-4.5.0-aarch64.tar.gz
-      args:
-        chdir: "{{ source_build_dir }}/jetson-containers/scripts"
-      become: true
-  vars:
-    block_name: OpenCV
-  when: not opencv_build_dir_exist.stat.exists
+# - name: Build and install OpenCV
+#   block:
+#     - name: "{{ block_name }}: Download install script"
+#       ansible.builtin.git:
+#         repo: https://github.com/dusty-nv/jetson-containers.git
+#         dest: "{{ source_build_dir }}/jetson-containers"
+#         version: L4T-R35.1.0
+#     - name: "{{ block_name }}: install dependencies"
+#       shell: ./opencv_install_deps.sh
+#       args:
+#         chdir: "{{ source_build_dir }}/jetson-containers/scripts"
+#       become: true
+#     - name: "{{ block_name }}: execute install script"
+#       shell: ./opencv_install.sh https://nvidia.box.com/shared/static/5v89u6g5rb62fpz4lh0rz531ajo2t5ef.gz OpenCV-4.5.0-aarch64.tar.gz
+#       args:
+#         chdir: "{{ source_build_dir }}/jetson-containers/scripts"
+#       become: true
+#   vars:
+#     block_name: OpenCV
+#   when: not opencv_build_dir_exist.stat.exists
 
 - name: Check YAML build directory existence
   ansible.builtin.stat:
@@ -261,34 +266,34 @@
     block_name: YAML
   when: not yaml_cpp_build_dir_exist.stat.exists
 
-- name: Upgrade CMake
-  block:
-    - name: "{{ block_name }}: update gpg key"
-      shell: wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
-    # Follow drirections here: https://apt.kitware.com/
-    - name: "{{ block_name }}: update repository info"
-      ansible.builtin.apt_repository:
-        repo: deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ {{ ansible_distribution_release }} main
-        filename: kitware
-    - name: "{{ block_name }}: apt update"
-      ansible.builtin.apt:
-        update_cache: true
-        state: present
+# - name: Upgrade CMake
+#   block:
+    # - name: "{{ block_name }}: update gpg key"
+    #   shell: wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
+    # # Follow drirections here: https://apt.kitware.com/
+    # - name: "{{ block_name }}: update repository info"
+    #   ansible.builtin.apt_repository:
+    #     repo: deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ {{ ansible_distribution_release }} main
+    #     filename: kitware
+    # - name: "{{ block_name }}: apt update"
+    #   ansible.builtin.apt:
+    #     update_cache: true
+    #     state: present
     # - name: "{{ block_name }}: delete gpg key"
     #   ansible.builtin.file:
     #     path: /usr/share/keyrings/kitware-archive-keyring.gpg
     #     state: absent
-    - name: "{{ block_name }}: install kitware-arcyhive-keyring"
-      ansible.builtin.apt:
-        name: kitware-archive-keyring
-    - name: "{{ block_name }}: install newer cmake"
-      ansible.builtin.apt:
-        name: cmake
-        install_recommends: false
-        state: latest
-  become: true
-  vars:
-    block_name: Upgrade CMake
+    # - name: "{{ block_name }}: install kitware-arcyhive-keyring"
+    #   ansible.builtin.apt:
+    #     name: kitware-archive-keyring
+    # - name: "{{ block_name }}: install newer cmake"
+    #   ansible.builtin.apt:
+    #     name: cmake
+    #     install_recommends: false
+    #     state: latest
+  # become: true
+  # vars:
+  #   block_name: Upgrade CMake
 
 - name: update GCC
   block:
