comment out catkin-pkg-modules

--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -194,7 +194,7 @@
       ansible.builtin.pip:
         name:
           - colcon-common-extensions
-          - catkin-pkg-modules
+          # - catkin-pkg-modules
           - argcomplete
           - flake8-blind-except
           - flake8-builtins
