--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -35,15 +35,11 @@
           - libbullet-dev
           - libpython3-dev
           - python3-wheel
-          # - python3-colcon-common-extensions
           - python3-flake8
           - python3-pip
           - python3-numpy
-          - python3-pytest-cov
-          # - python3-rosdep
+          - python3-pytest-covdep
           - python3-setuptools
-          # - python3-vcstool
-          # - python3-rosinstall-generator
           - libasio-dev
           - libtinyxml2-dev
           - libcunit1-dev
@@ -214,27 +210,6 @@
     path: "{{ source_build_dir }}/jetson-containers"
   register: opencv_build_dir_exist
 
-# - name: Build and install OpenCV
-#   block:
-#     - name: "{{ block_name }}: Download install script"
-#       ansible.builtin.git:
-#         repo: https://github.com/dusty-nv/jetson-containers.git
-#         dest: "{{ source_build_dir }}/jetson-containers"
-#         version: L4T-R35.1.0
-#     - name: "{{ block_name }}: install dependencies"
-#       shell: ./opencv_install_deps.sh
-#       args:
-#         chdir: "{{ source_build_dir }}/jetson-containers/scripts"
-#       become: true
-#     - name: "{{ block_name }}: execute install script"
-#       shell: ./opencv_install.sh https://nvidia.box.com/shared/static/5v89u6g5rb62fpz4lh0rz531ajo2t5ef.gz OpenCV-4.5.0-aarch64.tar.gz
-#       args:
-#         chdir: "{{ source_build_dir }}/jetson-containers/scripts"
-#       become: true
-#   vars:
-#     block_name: OpenCV
-#   when: not opencv_build_dir_exist.stat.exists
-
 - name: Check YAML build directory existence
   ansible.builtin.stat:
     path: "{{ source_build_dir }}/yaml-cpp"
@@ -268,7 +243,7 @@
 
 - name: Upgrade CMake
   block:
-    # Follow drirections here: https://apt.kitware.com/
+    # Follow directions here: https://apt.kitware.com/
     - name: "{{ block_name }}: update gpg key"
       shell: wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
     - name: "{{ block_name }}: update repository info"
