Fix dependency name problem edge-auto-jetson architecture
It seems that there is a problem with the dependency name: python3-pytest-covdep, just rename it to python3-pytest-cov and that solves the problem running the script ./setup-dev-env.sh

--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -38,7 +38,7 @@
           - python3-flake8
           - python3-pip
           - python3-numpy
-          - python3-pytest-covdep
+          - python3-pytest-cov
           - python3-setuptools
           - libasio-dev
           - libtinyxml2-dev
