feat: Add ptp4l_host role option to setup.yaml

--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -25,6 +25,8 @@
     - role: artifacts
     - role: cgroups
       when: prompt_configure_user_resources == 'y'
+    - role: ptp4l_host
+      when: prompt_configure_network == 'y':
     - role: ptp4l_client
       when: prompt_configure_network == 'y'
     - role: enlarge_txqueue
