--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -13,6 +13,7 @@
           interface_name: eth0
     - ptp4l_client_interface: eqos0
     - ptp4l_host_interface: eth0
+    - artifacts_script_download_dir: /home/autoware/autoware_data
   vars_prompt:
     - name: prompt_configure_network
       prompt: |-
