--- a/ansible/roles/sensor_trigger_for_anvil/tasks/main.yaml
+++ b/ansible/roles/sensor_trigger_for_anvil/tasks/main.yaml
@@ -7,10 +7,10 @@
 
 - name: Add user to gpio group
   ansible.builtin.command:
-    cmd: gpasswd -a nvidia gpio
+    cmd: gpasswd -a {{ sensor_trigger_for_anvil_user_name }} gpio
   become: true
 
 - name: Add user to i2c group
   ansible.builtin.command:
-    cmd: gpasswd -a nvidia i2c
+    cmd: gpasswd -a {{ sensor_trigger_for_anvil_user_name }} i2c
   become: true
